# ast-diff

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  old-README.md  plot_runtime.py  pyproject.toml
.github/workflows/: codecov.yml
astdiff/: __main__.py  ast.py  change_distilling.py  context.py  differ.py  edit_script.py  gumtree.py  io.py  main.py  matcher.py  metadata.py  parse.py  parser.py  queue.py  script_generator.py  transform.py  traversal.py  util.py
astdiff/ast/: metadata.py  node.py  parser.py  parser_factory.py  traversal.py
astdiff/editscript/: __init__.py  generator.py  ops.py  types.py
astdiff/generator/: base.py  factory.py  with_move.py
astdiff/matcher/: factory.py  gumtree.py  gumtree_utils.py
astdiff/parser/: base.py  builtin.py  factory.py  parso.py
docs/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
scratch/: draw_trees.ipynb
tests/: ast_test.py  change_distilling_test.py  conftest.py  differ_test.py  gumtree_test.py  io_test.py  main_test.py  metadata_test.py  parser_test.py  performance_test.py  script_generator_test.py  transform_test.py  traversal_test.py  util_test.py
tests/data/: 2k_lines_source.py  2k_lines_target.py  django_serializer_19e0587.py  django_serializer_8f30556.py  foo1.py  foo2.py  isomorphic1.py  isomorphic2.py  moved_statement1.py  moved_statement2.py  moveupdate1.py  moveupdate2.py  test1.py  test2.py  updated2.py  whitespace.py
tests/data/runtimetest/: django_admin_filters_500.py  django_aggregation_regress_1800.py  django_asgi_300.py  django_constraints_models_100.py  django_constraints_tests_800.py  django_get_or_create_tests_700.py  django_migrations_test_state_2000.py  django_model_fields_init_2700.py  django_models_options_1000.py  django_postgres_test_array_1400.py  django_wsgi_200.py
