[tool.poetry]
name = "astdiff"
version = "0.1.0"
description = ""
authors = ["Henri Nikku <henrinikku1@gmail.com>"]

[tool.poetry.scripts]
astdiff = "astdiff.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.6.1" }
pytest = "^7.1.3"
parso = "^0.8.3"
more-itertools = "^8.14.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
ipykernel = "^6.15.3"
coverage = { extras = ["toml"], version = "^6.4.4" }
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.black]
extend-exclude = "tests/data"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
omit = ["tests/*"]

[tool.isort]
py_version = "auto"
profile = "black"
extend_skip_glob = ["tests/data/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
